fix: spacing fixed

--- a/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/layout/styles.scss
+++ b/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/layout/styles.scss
@@ -60,10 +60,6 @@
   display: none;
 }
 
-br {
-  display: none;
-}
-
 .main-content .content > hr {
   margin: var(--size-m1) 0;
 
